force-app/main/default/objects/RTV_Summary__c/RTV_Summary__c.object-meta.xml
<CustomObject>
    <description>Return order summary for one wholesale</description>
    <label>RTV Summary</label>
    <nameField>
        <label>Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTV Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>