force-app/main/default/objects/RTV_Summary__c/fields/Actual_Date_Of_CS_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Of_CS_Confirmed__c</fullName>
    <description>CS确认完成实际日期</description>
    <inlineHelpText>CS确认完成实际日期</inlineHelpText>
    <label>Actual Date Of CS Confirmed</label>
    <type>Date</type>
</CustomField>