force-app/main/default/objects/RTV_Summary__c/fields/Actual_Date_Of_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Of_Delivered__c</fullName>
    <description>LF提货运输完成实际日期</description>
    <inlineHelpText>LF提货运输完成实际日期</inlineHelpText>
    <label>Actual Date Of Delivered</label>
    <type>Date</type>
</CustomField>