force-app/main/default/objects/RTV_Summary__c/fields/Actual_Date_Of_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Of_Inbound__c</fullName>
    <description>Inbound关单完成实际日期</description>
    <inlineHelpText>Inbound关单完成实际日期</inlineHelpText>
    <label>Actual Date Of Inbound</label>
    <type>Date</type>
</CustomField>