force-app/main/default/objects/RTV_Summary__c/fields/Actual_Date_Of_Inspected__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Of_Inspected__c</fullName>
    <description>LF质检完成实际日期</description>
    <inlineHelpText>LF质检完成实际日期</inlineHelpText>
    <label>Actual Date Of Inspected</label>
    <type>Date</type>
</CustomField>