force-app/main/default/objects/RTV_Summary__c/fields/Actual_Date_Of_Kick_Off__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Of_Kick_Off__c</fullName>
    <description>Kick Off 实际日期</description>
    <inlineHelpText>Kick Off 实际日期</inlineHelpText>
    <label>Actual Date Of Kick Off</label>
    <type>Date</type>
</CustomField>