force-app/main/default/objects/RTV_Summary__c/fields/Actual_Date_Of_PTLF__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Of_PTLF__c</fullName>
    <description>授权备货实际日期</description>
    <inlineHelpText>授权备货实际日期</inlineHelpText>
    <label>Actual Date Of PTLF</label>
    <type>Date</type>
</CustomField>