force-app/main/default/objects/RTV_Summary__c/fields/Actual_Date_Of_WSL_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Of_WSL_Confirmed__c</fullName>
    <description>WSL确认完成实际日期</description>
    <inlineHelpText>WSL确认完成实际日期</inlineHelpText>
    <label>Actual Date Of WSL Confirmed</label>
    <type>Date</type>
</CustomField>