force-app/main/default/objects/RTV_Summary__c/fields/APACNoB__c.field-meta.xml
<CustomField>
    <fullName>APACNoB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>如果checkbox为true,该Summary下所有BU为APAC的商品B品免除加工费</description>
    <inlineHelpText>如果checkbox为true,该Summary下所有BU为APAC的商品B品免除加工费</inlineHelpText>
    <label>APACNoB</label>
    <type>Checkbox</type>
</CustomField>