force-app/main/default/objects/RTV_Summary__c/fields/Application_Amount_CNY__c.field-meta.xml
<CustomField>
    <fullName>Application_Amount_CNY__c</fullName>
    <formula>Application_Amount__c * RTV_Program__r.ExRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Amount (CNY/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>