force-app/main/default/objects/RTV_Summary__c/fields/Combine_DN__c.field-meta.xml
<CustomField>
    <fullName>Combine_DN__c</fullName>
    <description>SAP CSV空白列</description>
    <label>Combine_DN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>