force-app/main/default/objects/RTV_Summary__c/fields/CS_Inbound_Comment__c.field-meta.xml
<CustomField>
    <fullName>CS_Inbound_Comment__c</fullName>
    <description>CS入库备注</description>
    <label>CS Inbound Comment</label>
    <length>120</length>
    <type>Text</type>
</CustomField>