force-app/main/default/objects/RTV_Summary__c/fields/Current_Status_QTY__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_QTY__c</fullName>
    <label>Current Status QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>