force-app/main/default/objects/RTV_Summary__c/fields/Date_Of_TB_Start__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_TB_Start__c</fullName>
    <label>Date Of TB Start</label>
    <type>Date</type>
</CustomField>