force-app/main/default/objects/RTV_Summary__c/fields/Delivery_QTY__c.field-meta.xml
<CustomField>
    <fullName>Delivery_QTY__c</fullName>
    <description>Total Delivery QTY</description>
    <inlineHelpText>Total Delivery QTY</inlineHelpText>
    <label>Delivery QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>