force-app/main/default/objects/RTV_Summary__c/fields/DTC_Type__c.field-meta.xml
<CustomField>
    <fullName>DTC_Type__c</fullName>
    <formula>RTV_Program__r.DTC_Type__c</formula>
    <label>DTC Type</label>
    <type>Text</type>
</CustomField>