force-app/main/default/objects/RTV_Summary__c/fields/Expected_Date_Of_Completed__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_Completed__c</fullName>
    <label>Expected Date Of Completed</label>
    <type>Date</type>
</CustomField>