force-app/main/default/objects/RTV_Summary__c/fields/Expected_Date_Of_CS_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_CS_Confirmed__c</fullName>
    <description>CS确认完成预计日期</description>
    <inlineHelpText>CS确认完成预计日期</inlineHelpText>
    <label>Expected Date Of CS Confirmed</label>
    <type>Date</type>
</CustomField>