force-app/main/default/objects/RTV_Summary__c/fields/Expected_Date_Of_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_Delivered__c</fullName>
    <description>LF提货运输完成预计日期</description>
    <inlineHelpText>LF提货运输完成预计日期</inlineHelpText>
    <label>Expected Date Of Delivered Complete</label>
    <type>Date</type>
</CustomField>