force-app/main/default/objects/RTV_Summary__c/fields/Expected_Date_Of_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_Inbound__c</fullName>
    <description>Inbound关单完成预计日期</description>
    <inlineHelpText>Inbound关单完成预计日期</inlineHelpText>
    <label>Expected Date Of Inbound</label>
    <type>Date</type>
</CustomField>