force-app/main/default/objects/RTV_Summary__c/fields/Expected_Date_Of_Inpected__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_Inpected__c</fullName>
    <description>LF质检完成预计日期</description>
    <inlineHelpText>LF质检完成预计日期</inlineHelpText>
    <label>Expected Date Of Inpected</label>
    <type>Date</type>
</CustomField>