force-app/main/default/objects/RTV_Summary__c/fields/Expected_Date_Of_Kick_Off__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_Kick_Off__c</fullName>
    <description>Kick Off预计日期</description>
    <inlineHelpText>Kick Off预计日期</inlineHelpText>
    <label>Expected Date Of Kick Off</label>
    <type>Date</type>
</CustomField>