force-app/main/default/objects/RTV_Summary__c/fields/Expected_Date_Of_LF_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_LF_Inbound__c</fullName>
    <label>Expected Date Of LF Inbound</label>
    <type>Date</type>
</CustomField>