force-app/main/default/objects/RTV_Summary__c/fields/Expected_Date_Of_PTLF__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_PTLF__c</fullName>
    <description>授权备货预计日期</description>
    <inlineHelpText>授权备货预计日期</inlineHelpText>
    <label>Expected Date Of PTLF</label>
    <type>Date</type>
</CustomField>