force-app/main/default/objects/RTV_Summary__c/fields/Expected_Date_Of_WSL_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_WSL_Confirmed__c</fullName>
    <description>WSL确认完成预计日期</description>
    <inlineHelpText>WSL确认完成预计日期</inlineHelpText>
    <label>Expected Date Of WSL Confirmed</label>
    <type>Date</type>
</CustomField>