force-app/main/default/objects/RTV_Summary__c/fields/FWNoB__c.field-meta.xml
<CustomField>
    <fullName>FWNoB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>如果checkbox为true,该Summary下所有BU为FW的商品B品免除加工费</description>
    <label>FWNoB</label>
    <type>Checkbox</type>
</CustomField>