force-app/main/default/objects/RTV_Summary__c/fields/Inbound_Amount__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Amount (CNY/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>