force-app/main/default/objects/RTV_Summary__c/fields/Inbound_QTY__c.field-meta.xml
<CustomField>
    <fullName>Inbound_QTY__c</fullName>
    <description>Total Inbound QTY</description>
    <inlineHelpText>Total Inbound QTY</inlineHelpText>
    <label>Inbound QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>