force-app/main/default/objects/RTV_Summary__c/fields/Insp_CS_Approve_Required__c.field-meta.xml
<CustomField>
    <fullName>Insp_CS_Approve_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>检验报告是否需要CS审批</description>
    <inlineHelpText>Is inspection list need CS user to approve ?</inlineHelpText>
    <label>Insp CS Approve Required</label>
    <type>Checkbox</type>
</CustomField>