force-app/main/default/objects/RTV_Summary__c/fields/Insp_CS_Approved__c.field-meta.xml
<CustomField>
    <fullName>Insp_CS_Approved__c</fullName>
    <formula>IF( Insp_CS_Approve_Time__c != null, true, false )</formula>
    <label>Insp CS Approved</label>
    <type>Checkbox</type>
</CustomField>