force-app/main/default/objects/RTV_Summary__c/fields/Insp_Final_Approve_Time__c.field-meta.xml
<CustomField>
    <fullName>Insp_Final_Approve_Time__c</fullName>
    <description>Inspection完全审批通过的时间点</description>
    <label>Insp Final Approve Time</label>
    <type>DateTime</type>
</CustomField>