force-app/main/default/objects/RTV_Summary__c/fields/Insp_Final_Reject_Time__c.field-meta.xml
<CustomField>
    <fullName>Insp_Final_Reject_Time__c</fullName>
    <description>Inspection被彻底Reject的时间点</description>
    <label>Insp Final Reject Time</label>
    <type>DateTime</type>
</CustomField>