force-app/main/default/objects/RTV_Summary__c/fields/Insp_Submit_Time__c.field-meta.xml
<CustomField>
    <fullName>Insp_Submit_Time__c</fullName>
    <description>LF提交Inspection审批的时间点</description>
    <label>Insp Submit Time</label>
    <type>DateTime</type>
</CustomField>