force-app/main/default/objects/RTV_Summary__c/fields/Inspect_Amount_A__c.field-meta.xml
<CustomField>
    <fullName>Inspect_Amount_A__c</fullName>
    <description>退还客户A品金额合计</description>
    <label>Inspect Amount (A) (CNY/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>