force-app/main/default/objects/RTV_Summary__c/fields/Inspect_Amount_D__c.field-meta.xml
<CustomField>
    <fullName>Inspect_Amount_D__c</fullName>
    <description>退还客户金额D品合计</description>
    <label>Inspect Amount (D) (CNY/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>