force-app/main/default/objects/RTV_Summary__c/fields/Inspect_QTY_A__c.field-meta.xml
<CustomField>
    <fullName>Inspect_QTY_A__c</fullName>
    <description>Total Inspection QTY (Reason Code A)</description>
    <inlineHelpText>Total Inspection QTY (Reason Code A)</inlineHelpText>
    <label>Inspect QTY A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>