force-app/main/default/objects/RTV_Summary__c/fields/Inspect_QTY_B__c.field-meta.xml
<CustomField>
    <fullName>Inspect_QTY_B__c</fullName>
    <description>Total Inspection QTY (Reason Code B)</description>
    <inlineHelpText>Total Inspection QTY (Reason Code B)</inlineHelpText>
    <label>Inspect QTY B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>