force-app/main/default/objects/RTV_Summary__c/fields/Inspect_QTY_D__c.field-meta.xml
<CustomField>
    <fullName>Inspect_QTY_D__c</fullName>
    <description>Total Inspection QTY (Reason Code D)</description>
    <inlineHelpText>Total Inspection QTY (Reason Code D)</inlineHelpText>
    <label>Inspect QTY D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>