force-app/main/default/objects/RTV_Summary__c/fields/IsOwnerWSL__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerWSL__c</fullName>
    <formula>Owner:User.Profile.Name == &apos;RMS WSL HQ&apos; ||
Owner:User.Profile.Name == &apos;RMS WSL Reg Branch&apos; ||
Owner:User.Profile.Name == &apos;RMS WSL Sold To&apos; ||
Owner:User.Profile.Name == &apos;RMS WSL Ship To&apos; ||
Owner:User.Profile.Name == &apos;RMS WSL Ship To -Only DEF&apos;</formula>
    <label>Is Owner WSL?</label>
    <type>Checkbox</type>
</CustomField>