force-app/main/default/objects/RTV_Summary__c/fields/LF_DELY_Inbound_Date__c.field-meta.xml
<CustomField>
    <fullName>LF_DELY_Inbound_Date__c</fullName>
    <inlineHelpText>LF物流入库日期</inlineHelpText>
    <label>LF DELY Inbound Date</label>
    <type>Date</type>
</CustomField>