force-app/main/default/objects/RTV_Summary__c/fields/LF_WH_Inbound_Date__c.field-meta.xml
<CustomField>
    <fullName>LF_WH_Inbound_Date__c</fullName>
    <description>LF仓库入库日期</description>
    <label>LF WH Inbound Date</label>
    <type>Date</type>
</CustomField>