force-app/main/default/objects/RTV_Summary__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <inlineHelpText>下一个步骤</inlineHelpText>
    <label>Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WSL Kickoff</fullName>
            </value>
            <value>
                <fullName>WSL PKL</fullName>
            </value>
            <value>
                <fullName>LF D</fullName>
            </value>
            <value>
                <fullName>LF Insp</fullName>
            </value>
            <value>
                <fullName>CS Confirm</fullName>
            </value>
            <value>
                <fullName>WSL Confirm</fullName>
            </value>
            <value>
                <fullName>LF Inbound (AB)</fullName>
            </value>
            <value>
                <fullName>CS Inbound</fullName>
            </value>
            <value>
                <fullName>LF Inbound (C)</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
                <isActive>false</isActive>
                <label>Inbound</label>
            </value>
            <value>
                <fullName>LF Inbound</fullName>
                <isActive>false</isActive>
                <label>LF Inbound</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>