force-app/main/default/objects/RTV_Summary__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <defaultValue>&apos;ZRE&apos;</defaultValue>
    <description>SAP CSV固定值</description>
    <label>Order Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>