force-app/main/default/objects/RTV_Summary__c/fields/Program_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Expiration_Date__c</fullName>
    <formula>RTV_Program__r.Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Expiration Date</label>
    <type>Date</type>
</CustomField>