force-app/main/default/objects/RTV_Summary__c/fields/Program_Finance_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Finance_Code__c</fullName>
    <formula>RTV_Program__r.Finance_Code__c</formula>
    <label>Program Finance Code</label>
    <type>Text</type>
</CustomField>