force-app/main/default/objects/RTV_Summary__c/fields/Program_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Record_Type__c</fullName>
    <formula>RTV_Program__r.RecordType.Name</formula>
    <label>Program Record Type</label>
    <type>Text</type>
</CustomField>