force-app/main/default/objects/RTV_Summary__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <formula>IF(Recall__c, &apos;Recall&apos;, &apos;TakeBack&apos;)</formula>
    <label>Property</label>
    <type>Text</type>
</CustomField>