force-app/main/default/objects/RTV_Summary__c/fields/Purchase_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Type__c</fullName>
    <defaultValue>&apos;EMAL&apos;</defaultValue>
    <description>SAP CSV固定值</description>
    <label>Purchase Order Type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>