force-app/main/default/objects/RTV_Summary__c/fields/Return_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason_Code__c</fullName>
    <description>SAP CSV固定值
召回：120
残次：220</description>
    <label>Return_Reason_Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>