force-app/main/default/objects/RTV_Summary__c/fields/RTV_Program__c.field-meta.xml
<CustomField>
    <fullName>RTV_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Return Program, when the order is create by BP.</description>
    <label>RTV Program</label>
    <referenceTo>RTV_Program__c</referenceTo>
    <relationshipLabel>RTV Summaries</relationshipLabel>
    <relationshipName>Return_Order</relationshipName>
    <type>Lookup</type>
</CustomField>