force-app/main/default/objects/RTV_Summary__c/fields/Summary_Budget__c.field-meta.xml
<CustomField>
    <fullName>Summary_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup summary budget</description>
    <label>Summary Budget</label>
    <referenceTo>RTV_RP_Summary_Budget__c</referenceTo>
    <relationshipLabel>RTV Summaries</relationshipLabel>
    <relationshipName>RTV_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>