force-app/main/default/objects/RTV_Summary__c/fields/Summary_Type__c.field-meta.xml
<CustomField>
    <fullName>Summary_Type__c</fullName>
    <description>WSL Takeback OR DTC Takeback</description>
    <label>Summary Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WSL Takeback</fullName>
                <default>true</default>
                <label>WSL Takeback</label>
            </value>
            <value>
                <fullName>DTC Takeback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>