force-app/main/default/objects/RTV_Summary__c/fields/Takeback_NET_B__c.field-meta.xml
<CustomField>
    <fullName>Takeback_NET_B__c</fullName>
    <formula>Inspect_Amount_B__c / $Setup.ConverseRMS__c.ExRate__c</formula>
    <label>Inspect Amount (B) (USD/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>