force-app/main/default/objects/RTV_Summary__c/fields/TB_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>TB_Start_Date__c</fullName>
    <label>TB Start Date</label>
    <type>Date</type>
</CustomField>