force-app/main/default/objects/RTV_Summary__c/recordTypes/DTC_Takeback_Post_LF.recordType-meta.xml
<RecordType>
    <fullName>DTC_Takeback_Post_LF</fullName>
    <active>true</active>
    <description>dtc takebake, status = post to LF</description>
    <label>DTC Takeback Post LF</label>
</RecordType>