force-app/main/default/objects/RTV_Summary__c/recordTypes/DTC_Takeback_Ready.recordType-meta.xml
<RecordType>
    <fullName>DTC_Takeback_Ready</fullName>
    <active>true</active>
    <description>dtc takeback, status = Ready</description>
    <label>DTC Takeback Ready</label>
</RecordType>