force-app/main/default/objects/RTV_Summary__c/recordTypes/DTC_Takeback_Remove.recordType-meta.xml
<RecordType>
    <fullName>DTC_Takeback_Remove</fullName>
    <active>true</active>
    <description>dtc takeback, status = Remove</description>
    <label>DTC Takeback Remove</label>
</RecordType>