force-app/main/default/objects/RTV_Summary__c/recordTypes/Remove.recordType-meta.xml
<RecordType>
    <fullName>Remove</fullName>
    <active>true</active>
    <description>Removed</description>
    <label>Remove</label>
</RecordType>