force-app/main/default/objects/RTV_Summary__c/recordTypes/WSL_Takeback_Pending.recordType-meta.xml
<RecordType>
    <fullName>WSL_Takeback_Pending</fullName>
    <active>true</active>
    <description>wholesale takeback, status = Pending</description>
    <label>WSL Takeback Pending</label>
</RecordType>