force-app/main/default/objects/RTV_Summary__c/recordTypes/WSL_Takeback_Post_LF.recordType-meta.xml
<RecordType>
    <fullName>WSL_Takeback_Post_LF</fullName>
    <active>true</active>
    <description>wholesale takebake, status = post to LF</description>
    <label>WSL Takeback Post LF</label>
</RecordType>