force-app/main/default/objects/RTV_Summary__c/recordTypes/WSL_Takeback_Ready.recordType-meta.xml
<RecordType>
    <fullName>WSL_Takeback_Ready</fullName>
    <active>true</active>
    <description>wholesale takebake, status = Ready</description>
    <label>WSL Takeback Ready</label>
</RecordType>