force-app/main/default/objects/RTV_Summary__c/recordTypes/WSL_Takeback_Ready_To_WSL.recordType-meta.xml
<RecordType>
    <fullName>WSL_Takeback_Ready_To_WSL</fullName>
    <active>true</active>
    <description>Summary的Owner转给WSL时</description>
    <label>WSL Takeback Ready To WSL</label>
</RecordType>