force-app/main/default/objects/RTV_Summary__c/validationRules/ExpectedInsDateCanNotChange.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpectedInsDateCanNotChange</fullName>
    <active>true</active>
    <description>Expected InsDate CanNot Change After Inspected</description>
    <errorConditionFormula>AND( 
ISCHANGED( Expected_Date_Of_Inpected__c ) ,
TEXT(Actual_Date_Of_Inspected__c) != &apos;&apos;,
$Profile.Name != &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorDisplayField>Expected_Date_Of_Inpected__c</errorDisplayField>
    <errorMessage>质检完成后，请不要再更改【预计完成质检日】!</errorMessage>
</ValidationRule>