force-app/main/default/objects/RTV_Summary__c/validationRules/NotChangeName.validationRule-meta.xml
<ValidationRule>
    <fullName>NotChangeName</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Name) &amp;&amp; $Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please don&apos;t change the summary name</errorMessage>
</ValidationRule>