force-app/main/default/objects/RTV_Summary__c/validationRules/PostLF_Need_Application.validationRule-meta.xml
<ValidationRule>
    <fullName>PostLF_Need_Application</fullName>
    <active>true</active>
    <description>PostToLF时，必须有ApplicationQTY</description>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp;
ISPICKVAL(Status__c, &apos;POST to LF&apos;) &amp;&amp;
Application_QTY__c == 0</errorConditionFormula>
    <errorMessage>申请数量不能为0</errorMessage>
</ValidationRule>